HelloWorld/gen/columbia/plt/tt/HelloWorldParser.java
// $ANTLR 3.5 /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g 2013-04-15 14:17:45

	package columbia.plt.tt;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class HelloWorldParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BOOL", "COMMENT", 
		"DAY", "DIGIT", "DIV", "EQUALS", "GT", "GTEQ", "HOUR", "IDENT", "LETTER", 
		"LOWER", "LT", "LTEQ", "MINUS", "MINUTE", "MOD", "MONTH", "MULT", "NONCONTROL_CHAR", 
		"NOT", "NOTEQUALS", "NUMBER", "OR", "PLUS", "QUOTE", "SPACE", "STRING", 
		"STRING_CONSTANT", "SYMBOL", "TIMEENTITYDAY", "TIMEENTITYMONTH", "TIMEENTITYWEEK", 
		"UPPER", "WS", "YEAR", "'('", "')'", "'.'", "';'", "'Calendar'", "'Date'", 
		"'Number'", "'Read'", "'String'", "'Task'", "'TimeFrame'", "'Timeframe'", 
		"'break'", "'by'", "'continue'", "'day'", "'days'", "'description'", "'else'", 
		"'end'", "'every'", "'exit'", "'from'", "'hour'", "'hours'", "'if'", "'in'", 
		"'location'", "'minute'", "'minutes'", "'month'", "'months'", "'name'", 
		"'on'", "'print'", "'start'", "'to'", "'until'", "'year'", "'years'", 
		"'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int BOOL=6;
	public static final int COMMENT=7;
	public static final int DAY=8;
	public static final int DIGIT=9;
	public static final int DIV=10;
	public static final int EQUALS=11;
	public static final int GT=12;
	public static final int GTEQ=13;
	public static final int HOUR=14;
	public static final int IDENT=15;
	public static final int LETTER=16;
	public static final int LOWER=17;
	public static final int LT=18;
	public static final int LTEQ=19;
	public static final int MINUS=20;
	public static final int MINUTE=21;
	public static final int MOD=22;
	public static final int MONTH=23;
	public static final int MULT=24;
	public static final int NONCONTROL_CHAR=25;
	public static final int NOT=26;
	public static final int NOTEQUALS=27;
	public static final int NUMBER=28;
	public static final int OR=29;
	public static final int PLUS=30;
	public static final int QUOTE=31;
	public static final int SPACE=32;
	public static final int STRING=33;
	public static final int STRING_CONSTANT=34;
	public static final int SYMBOL=35;
	public static final int TIMEENTITYDAY=36;
	public static final int TIMEENTITYMONTH=37;
	public static final int TIMEENTITYWEEK=38;
	public static final int UPPER=39;
	public static final int WS=40;
	public static final int YEAR=41;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public HelloWorldParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public HelloWorldParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return HelloWorldParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g"; }



	// $ANTLR start "declarationStatement"
	// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:16:1: declarationStatement : type ( WS )* IDENT ( WS )* ';' ;
	public final void declarationStatement() throws RecognitionException {
		try {
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:17:2: ( type ( WS )* IDENT ( WS )* ';' )
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:17:4: type ( WS )* IDENT ( WS )* ';'
			{
			pushFollow(FOLLOW_type_in_declarationStatement43);
			type();
			state._fsp--;

			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:17:9: ( WS )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==WS) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:17:9: WS
					{
					match(input,WS,FOLLOW_WS_in_declarationStatement45); 
					}
					break;

				default :
					break loop1;
				}
			}

			match(input,IDENT,FOLLOW_IDENT_in_declarationStatement48); 
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:17:19: ( WS )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==WS) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:17:19: WS
					{
					match(input,WS,FOLLOW_WS_in_declarationStatement50); 
					}
					break;

				default :
					break loop2;
				}
			}

			match(input,45,FOLLOW_45_in_declarationStatement53); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarationStatement"



	// $ANTLR start "type"
	// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:20:1: type : ( 'String' | 'Number' | 'Date' | 'Task' | 'TimeFrame' | 'Calendar' );
	public final void type() throws RecognitionException {
		try {
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:21:2: ( 'String' | 'Number' | 'Date' | 'Task' | 'TimeFrame' | 'Calendar' )
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:
			{
			if ( (input.LA(1) >= 46 && input.LA(1) <= 48)||(input.LA(1) >= 50 && input.LA(1) <= 52) ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "definitionStatement"
	// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:29:1: definitionStatement : ( dateDefnStmt | calendarDefnStmt | timeFrameDefnStmt | taskDefnStmt | stringDefnStmt | numberDefnStmt | fieldDefnStmt );
	public final void definitionStatement() throws RecognitionException {
		try {
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:30:2: ( dateDefnStmt | calendarDefnStmt | timeFrameDefnStmt | taskDefnStmt | stringDefnStmt | numberDefnStmt | fieldDefnStmt )
			int alt3=7;
			alt3 = dfa3.predict(input);
			switch (alt3) {
				case 1 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:30:4: dateDefnStmt
					{
					pushFollow(FOLLOW_dateDefnStmt_in_definitionStatement101);
					dateDefnStmt();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:31:4: calendarDefnStmt
					{
					pushFollow(FOLLOW_calendarDefnStmt_in_definitionStatement106);
					calendarDefnStmt();
					state._fsp--;

					}
					break;
				case 3 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:32:4: timeFrameDefnStmt
					{
					pushFollow(FOLLOW_timeFrameDefnStmt_in_definitionStatement111);
					timeFrameDefnStmt();
					state._fsp--;

					}
					break;
				case 4 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:33:4: taskDefnStmt
					{
					pushFollow(FOLLOW_taskDefnStmt_in_definitionStatement116);
					taskDefnStmt();
					state._fsp--;

					}
					break;
				case 5 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:34:4: stringDefnStmt
					{
					pushFollow(FOLLOW_stringDefnStmt_in_definitionStatement121);
					stringDefnStmt();
					state._fsp--;

					}
					break;
				case 6 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:35:4: numberDefnStmt
					{
					pushFollow(FOLLOW_numberDefnStmt_in_definitionStatement126);
					numberDefnStmt();
					state._fsp--;

					}
					break;
				case 7 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:36:4: fieldDefnStmt
					{
					pushFollow(FOLLOW_fieldDefnStmt_in_definitionStatement131);
					fieldDefnStmt();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "definitionStatement"



	// $ANTLR start "dateDefnStmt"
	// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:40:1: dateDefnStmt : ( 'Date' ( WS )* IDENT ( WS )* ASSIGN ( WS )* dateConstant ( WS )* ';' | IDENT ASSIGN ( WS )* dateConstant ( WS )* ';' );
	public final void dateDefnStmt() throws RecognitionException {
		try {
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:2: ( 'Date' ( WS )* IDENT ( WS )* ASSIGN ( WS )* dateConstant ( WS )* ';' | IDENT ASSIGN ( WS )* dateConstant ( WS )* ';' )
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==47) ) {
				alt10=1;
			}
			else if ( (LA10_0==IDENT) ) {
				alt10=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}

			switch (alt10) {
				case 1 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:4: 'Date' ( WS )* IDENT ( WS )* ASSIGN ( WS )* dateConstant ( WS )* ';'
					{
					match(input,47,FOLLOW_47_in_dateDefnStmt144); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:11: ( WS )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==WS) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:11: WS
							{
							match(input,WS,FOLLOW_WS_in_dateDefnStmt146); 
							}
							break;

						default :
							break loop4;
						}
					}

					match(input,IDENT,FOLLOW_IDENT_in_dateDefnStmt149); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:21: ( WS )*
					loop5:
					while (true) {
						int alt5=2;
						int LA5_0 = input.LA(1);
						if ( (LA5_0==WS) ) {
							alt5=1;
						}

						switch (alt5) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:21: WS
							{
							match(input,WS,FOLLOW_WS_in_dateDefnStmt151); 
							}
							break;

						default :
							break loop5;
						}
					}

					match(input,ASSIGN,FOLLOW_ASSIGN_in_dateDefnStmt154); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:32: ( WS )*
					loop6:
					while (true) {
						int alt6=2;
						int LA6_0 = input.LA(1);
						if ( (LA6_0==WS) ) {
							alt6=1;
						}

						switch (alt6) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:32: WS
							{
							match(input,WS,FOLLOW_WS_in_dateDefnStmt156); 
							}
							break;

						default :
							break loop6;
						}
					}

					pushFollow(FOLLOW_dateConstant_in_dateDefnStmt159);
					dateConstant();
					state._fsp--;

					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:49: ( WS )*
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==WS) ) {
							alt7=1;
						}

						switch (alt7) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:41:49: WS
							{
							match(input,WS,FOLLOW_WS_in_dateDefnStmt161); 
							}
							break;

						default :
							break loop7;
						}
					}

					match(input,45,FOLLOW_45_in_dateDefnStmt164); 
					}
					break;
				case 2 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:42:4: IDENT ASSIGN ( WS )* dateConstant ( WS )* ';'
					{
					match(input,IDENT,FOLLOW_IDENT_in_dateDefnStmt169); 
					match(input,ASSIGN,FOLLOW_ASSIGN_in_dateDefnStmt171); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:42:17: ( WS )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==WS) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:42:17: WS
							{
							match(input,WS,FOLLOW_WS_in_dateDefnStmt173); 
							}
							break;

						default :
							break loop8;
						}
					}

					pushFollow(FOLLOW_dateConstant_in_dateDefnStmt176);
					dateConstant();
					state._fsp--;

					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:42:34: ( WS )*
					loop9:
					while (true) {
						int alt9=2;
						int LA9_0 = input.LA(1);
						if ( (LA9_0==WS) ) {
							alt9=1;
						}

						switch (alt9) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:42:34: WS
							{
							match(input,WS,FOLLOW_WS_in_dateDefnStmt178); 
							}
							break;

						default :
							break loop9;
						}
					}

					match(input,45,FOLLOW_45_in_dateDefnStmt181); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dateDefnStmt"



	// $ANTLR start "timeFrameDefnStmt"
	// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:45:1: timeFrameDefnStmt : ( 'Timeframe' ( WS )* IDENT ( WS )* ASSIGN ( WS )* timeFrameConstant ( WS )* ';' | IDENT ( WS )* ASSIGN ( WS )* timeFrameConstant ( WS )* ';' );
	public final void timeFrameDefnStmt() throws RecognitionException {
		try {
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:2: ( 'Timeframe' ( WS )* IDENT ( WS )* ASSIGN ( WS )* timeFrameConstant ( WS )* ';' | IDENT ( WS )* ASSIGN ( WS )* timeFrameConstant ( WS )* ';' )
			int alt18=2;
			int LA18_0 = input.LA(1);
			if ( (LA18_0==53) ) {
				alt18=1;
			}
			else if ( (LA18_0==IDENT) ) {
				alt18=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 18, 0, input);
				throw nvae;
			}

			switch (alt18) {
				case 1 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:4: 'Timeframe' ( WS )* IDENT ( WS )* ASSIGN ( WS )* timeFrameConstant ( WS )* ';'
					{
					match(input,53,FOLLOW_53_in_timeFrameDefnStmt193); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:16: ( WS )*
					loop11:
					while (true) {
						int alt11=2;
						int LA11_0 = input.LA(1);
						if ( (LA11_0==WS) ) {
							alt11=1;
						}

						switch (alt11) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:16: WS
							{
							match(input,WS,FOLLOW_WS_in_timeFrameDefnStmt195); 
							}
							break;

						default :
							break loop11;
						}
					}

					match(input,IDENT,FOLLOW_IDENT_in_timeFrameDefnStmt198); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:26: ( WS )*
					loop12:
					while (true) {
						int alt12=2;
						int LA12_0 = input.LA(1);
						if ( (LA12_0==WS) ) {
							alt12=1;
						}

						switch (alt12) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:26: WS
							{
							match(input,WS,FOLLOW_WS_in_timeFrameDefnStmt200); 
							}
							break;

						default :
							break loop12;
						}
					}

					match(input,ASSIGN,FOLLOW_ASSIGN_in_timeFrameDefnStmt203); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:37: ( WS )*
					loop13:
					while (true) {
						int alt13=2;
						int LA13_0 = input.LA(1);
						if ( (LA13_0==WS) ) {
							alt13=1;
						}

						switch (alt13) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:37: WS
							{
							match(input,WS,FOLLOW_WS_in_timeFrameDefnStmt205); 
							}
							break;

						default :
							break loop13;
						}
					}

					pushFollow(FOLLOW_timeFrameConstant_in_timeFrameDefnStmt208);
					timeFrameConstant();
					state._fsp--;

					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:59: ( WS )*
					loop14:
					while (true) {
						int alt14=2;
						int LA14_0 = input.LA(1);
						if ( (LA14_0==WS) ) {
							alt14=1;
						}

						switch (alt14) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:46:59: WS
							{
							match(input,WS,FOLLOW_WS_in_timeFrameDefnStmt210); 
							}
							break;

						default :
							break loop14;
						}
					}

					match(input,45,FOLLOW_45_in_timeFrameDefnStmt213); 
					}
					break;
				case 2 :
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:47:4: IDENT ( WS )* ASSIGN ( WS )* timeFrameConstant ( WS )* ';'
					{
					match(input,IDENT,FOLLOW_IDENT_in_timeFrameDefnStmt218); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:47:10: ( WS )*
					loop15:
					while (true) {
						int alt15=2;
						int LA15_0 = input.LA(1);
						if ( (LA15_0==WS) ) {
							alt15=1;
						}

						switch (alt15) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:47:10: WS
							{
							match(input,WS,FOLLOW_WS_in_timeFrameDefnStmt220); 
							}
							break;

						default :
							break loop15;
						}
					}

					match(input,ASSIGN,FOLLOW_ASSIGN_in_timeFrameDefnStmt223); 
					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:47:22: ( WS )*
					loop16:
					while (true) {
						int alt16=2;
						int LA16_0 = input.LA(1);
						if ( (LA16_0==WS) ) {
							alt16=1;
						}

						switch (alt16) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:47:22: WS
							{
							match(input,WS,FOLLOW_WS_in_timeFrameDefnStmt226); 
							}
							break;

						default :
							break loop16;
						}
					}

					pushFollow(FOLLOW_timeFrameConstant_in_timeFrameDefnStmt229);
					timeFrameConstant();
					state._fsp--;

					// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:47:44: ( WS )*
					loop17:
					while (true) {
						int alt17=2;
						int LA17_0 = input.LA(1);
						if ( (LA17_0==WS) ) {
							alt17=1;
						}

						switch (alt17) {
						case 1 :
							// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:47:44: WS
							{
							match(input,WS,FOLLOW_WS_in_timeFrameDefnStmt231); 
							}
							break;

						default :
							break loop17;
						}
					}

					match(input,45,FOLLOW_45_in_timeFrameDefnStmt234); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "timeFrameDefnStmt"



	// $ANTLR start "taskDefnStmt"
	// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:50:1: taskDefnStmt : 'Task' ( WS )* IDENT ASSIGN ( WS )* STRING ( WS )* ';' ;
	public final void taskDefnStmt() throws RecognitionException {
		try {
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:51:2: ( 'Task' ( WS )* IDENT ASSIGN ( WS )* STRING ( WS )* ';' )
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:51:4: 'Task' ( WS )* IDENT ASSIGN ( WS )* STRING ( WS )* ';'
			{
			match(input,51,FOLLOW_51_in_taskDefnStmt245); 
			// /home/athresh/Projects/PLT/TT/HelloWorld/src/columbia/plt/tt/HelloWorld.g:51:11: ( WS )*
			loop19:
			while (true) {
				int alt19=2;
				int LA19_0 = input.LA(1);
				if ( (LA19_0==WS) ) {
					alt19=1;
				}
